update learn-hive